# fastapi-book-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: 11-13.py  11-3.py  14_2.py  15-3.py  15-6.py  4-1.py  4-2.py  4-3.py  4-4.py  5-1-1.py  5-1-fewsample.py  5-14.py  5-16.py  5-17.py  5-2.py  5-3.py  5-4.py  5-5.py  5-6.py  5-7.py  5-9.py  6-1.py  6-2.py  6-3.py  6-5.py  7-1.py  7-2.py  7-3.py  7-4.py  7-5.py  7-6.py  7-7.py  7-8.py  7장_추가설명.md  ai.py  auth.py  auth2.py  data.py  error.py  fake_mod1.py  (+26 more)
src/data/: creature.py  explorer.py  game.py  init.py  user.py
src/db/: creature.psv  cryptid.db
src/fake/: creature.py  explorer.py  user.py
src/model/: creature.py  explorer.py  tag.py  user.py
src/service/: creature.py  explorer.py  game.py  tag.py  user.py
src/static/: abc.txt  form1.html
src/template/: game.html  list.html
src/test/full/: test_user.py
src/test/unit/data/: test_creature.py  test_explorer.py  test_user.py
src/test/unit/service/: test_creature.py  test_game.py  test_user.py
src/test/unit/web/: test_creature.py  test_user.py
src/web/: creature.py  explorer.py  game.py  tag.py  user.py
