[tool.poetry]
name = "fastapi-hanbit"
version = "0.1.0"
description = ""
authors = ["dextto <dexter.haan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hypothesis = "^6.98.11"
schemathesis = "^3.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
